# teleagent-skills

./: CONTRIBUTING.md  LICENSE  README.md  README_zh.md  SECURITY.md  demo.py  pyproject.toml
.github/workflows/: security-scan.yml
skills/data-aggregator/: SKILL.md  __init__.py  demo.py  engine.py
skills/evidence-chain/: SKILL.md  __init__.py  demo.py  engine.py
skills/evidence-chain/references/: conflict-rules.md  demo-data.md
skills/github-async-handoff/: SKILL.md
skills/nl2-query/: SKILL.md  __init__.py  demo.py  engine.py
skills/nl2-query/references/: dialect.md  domain_knowledge.md
skills/redis-message-bus/: SKILL.md
skills/scoring-engine/: SKILL.md  __init__.py  demo.py  engine.py
skills/scoring-engine/references/: scoring-rules.md
skills/visualization-renderer/: SKILL.md  __init__.py  demo.py  engine.py
